force-app/main/default/objects/Opportunity/fields/One_Time_Revenue__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Revenue__c</fullName>
    <label>One-Time Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>