force-app/main/default/objects/Opportunity/fields/Recurring_TCV__c.field-meta.xml
<CustomField>
    <fullName>Recurring_TCV__c</fullName>
    <label>Recurring TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>