force-app/main/default/objects/Opportunity/fields/Requires_Site_Survey__c.field-meta.xml
<CustomField>
    <fullName>Requires_Site_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Site Survey</label>
    <type>Checkbox</type>
</CustomField>