force-app/main/default/objects/Opportunity/fields/Solution_Type__c.field-meta.xml
<CustomField>
    <fullName>Solution_Type__c</fullName>
    <label>Solution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>