force-app/main/default/objects/Opportunity/fields/Target_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Go_Live_Date__c</fullName>
    <label>Target Go-Live Date</label>
    <type>Date</type>
</CustomField>