force-app/main/default/objects/Opportunity/recordTypes/EV_Charging_Deal.recordType-meta.xml
<RecordType>
    <fullName>EV_Charging_Deal</fullName>
    <active>true</active>
    <businessProcess>VE EV Charging Sales</businessProcess>
    <label>EV Charging Deal</label>
</RecordType>