force-app/main/default/objects/Opportunity/validationRules/VE_Closed_Lost_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>VE_Closed_Lost_Requires_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;EV_Charging_Deal&quot;,
    ISPICKVAL(StageName, &quot;Closed Lost&quot;),
    ISPICKVAL(Loss_Reason__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Select a Loss Reason before closing this EV charging deal as Lost.</errorMessage>
</ValidationRule>