force-app/main/default/objects/Opportunity/validationRules/VE_Proposal_Required_Data.validationRule-meta.xml
<ValidationRule>
    <fullName>VE_Proposal_Required_Data</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;EV_Charging_Deal&quot;,
    OR(
        ISPICKVAL(StageName, &quot;Proposal/Price Quote&quot;),
        ISPICKVAL(StageName, &quot;Negotiation/Review&quot;),
        ISPICKVAL(StageName, &quot;Closed Won&quot;)
    ),
    OR(
        ISPICKVAL(Deal_Type__c, &quot;&quot;),
        ISBLANK(Number_of_Sites__c),
        Number_of_Sites__c &lt;= 0,
        ISBLANK(Number_of_Chargers__c),
        Number_of_Chargers__c &lt;= 0,
        ISPICKVAL(Solution_Type__c, &quot;&quot;),
        ISBLANK(Target_Go_Live_Date__c)
    )
)</errorConditionFormula>
    <errorMessage>Before moving this EV charging deal to Proposal or later, complete Deal Type, Number of Sites, Number of Chargers, Solution Type and Target Go-Live Date.</errorMessage>
</ValidationRule>